The most significant changes include the refactoring of `LwjglToJavaFX.java` and `ExporterController.java` to remove their inheritance from `Main`, the addition of new instance variables in `LwjglFXGraphics.java` and `LwjglToJavaFX.java`, and the transformation of `RecordFX.java` into an abstract class with several methods changed to static.
1. In `LwjglFXGraphics.java`, two new instance variables `target` and `toFX` were added to the `LwjglFXGraphics` class. This change could potentially affect the way the class interacts with other classes or methods.

2. `LwjglToJavaFX.java` was refactored to remove its inheritance from `Main` and several new instance variables were added. The `pendingRunnables` variable was renamed to `pendingRunnable`. The `dispose` method was moved to a different location in the class. The `setRenderStreamFactory` and `getReadHandler` methods were updated to use the new `pendingRunnable` variable and `Main.width` and `Main.height` respectively.

3. In `SpineAdapter.java`, the `create` method was updated to set `Loader.spineVersion` to 38 and to always create a new `Standard` instance for `Runtimes`. This change could potentially affect the version of the loader and the creation of new instances.

4. In `Main.java`, the `recordFX` and `spineController` variables were removed from the `Main` class. This change could potentially affect the way the class interacts with other classes or methods.

5. `RecordFX.java` was changed to an abstract class and several methods were changed from instance methods to static methods. The `recorderFX` method was renamed to `Record` and its parameter type was changed from `WritableImage` to `PixelReader`. The `savePNG` method was changed from an inner class to a static method.

6. `ExporterController.java` was updated to remove its inheritance from `Main` and to use `Main` class variables instead of instance variables. Several methods were updated to use `Main` class variables. The `initialize` method was updated 