@@ -4,7 +4,7 @@ import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.graphics.Pixmap;
 import com.badlogic.gdx.graphics.PixmapIO;
 import javafx.application.Platform;
-import javafx.scene.image.WritableImage;
+import javafx.scene.image.PixelReader;
 import to.aloen.spine.Spine;
 
 import java.io.File;
@@ -14,26 +14,27 @@ import java.util.ArrayList;
 import java.util.Objects;
 import java.util.concurrent.LinkedBlockingQueue;
 
-public class RecordFX {
+public abstract class RecordFX {
     private static final LinkedBlockingQueue<Runnable> savePool = new LinkedBlockingQueue<>();
 
-    private static String fileName = null;
+    private static String fileName;
 
     private static short counter;
 
     private static short items;
 
-    public void recorderFX(WritableImage image) {
+    public static void Record(PixelReader image) {
         if (Spine.percent < 1) {
-            savePool.add(new savePNG(image, counter++));
-            // System.out.println("捕获：" + counter + "\t" + spine.getPercent());
+            counter++;
+            savePool.add(() -> savePNG(image, counter));
+            // System.out.println(STR."捕获：\{counter}\t\{Spine.percent}");
         } else {
             Main.recording = false;
-            new Thread(this::encodeFX).start();
+            Thread.startVirtualThread(RecordFX::encodeFX);
         }
     }
 
-    public void Start(String fileName) {
+    public static void Start(String fileName) {
         if (!Main.recording) {
             while (Spine.percent == 2)
                 Thread.onSpinWait();
@@ -43,7 +44,7 @@ public class RecordFX {
         }
     }
 
-    public void Exit() {
+    public static void Exit() {
         Main.recording = false;
         Spine.speed.set(1);
         Spine.isPlay.set(false);
@@ -53,7 +54,7 @@ public class RecordFX {
         System.gc();
     }
 
-    private void ffmpegFX() {
+    private static void ffmpegFX() {
         try {
             System.out.println("FFmpeg处理开始");
             Files.deleteIfExists(Path.of(STR."\{Main.outPath}\{fileName}.mov"));
@@ -85,7 +86,7 @@ public class RecordFX {
         }
     }
 
-    private void encodeFX() {
+    private static void encodeFX() {
         Platform.runLater(() -> Main.progressBar.setProgress(-1));
         System.out.println("请求：停止录制");
 
@@ -94,50 +95,47 @@ public class RecordFX {
         for (Runnable runnable : savePool)
             threads.add(Thread.startVirtualThread(runnable));
 
+        savePool.clear();
+
         for (Thread thread : threads)
             try {
                 thread.join();
             } catch (InterruptedException ignored) {
             }
 
-        System.gc();
-
         if (Main.sequence == Byte.MIN_VALUE)
             ffmpegFX();
 
+        Spine.speed.set(1);
+        counter = 0;
+        items = 0;
+
         Platform.runLater(() -> {
-            Spine.speed.set(1);
-            counter = 0;
-            items = 0;
-            Main.progressBar.setProgress(1);
+            Main.progressBar.setProgress(-1);
             System.out.println("导出结束");
+            System.gc();
         });
     }
 
-    private class savePNG implements Runnable {
-        private final short index;
-        private final WritableImage image;
+    private static void savePNG(PixelReader image, short index) {
+        Pixmap pixmap = new Pixmap(Main.width, Main.height, Pixmap.Format.RGBA8888) {{
+            for (int h = 0; h < Main.height; h++) {
+                for (int w = 0; w < Main.width; w++) {
+                    int argb = image.getArgb(w, h);
+                    drawPixel(w, h, (argb << 8) | (argb >>> 24));
+                }
+            }
+        }};
 
-        private savePNG(WritableImage image, short index) {
-            this.image = image;
-            this.index = index;
-        }
+        PixmapIO.writePNG(Gdx.files.absolute(
+            STR."\{Main.outPath}\{fileName}_Sequence\{File.separator}\{fileName}_\{index}.png"),
+            pixmap, Main.sequence, true
+        );
 
-        @Override
-        public void run() {
-            PixmapIO.writePNG(Gdx.files.absolute(STR."\{Main.outPath}\{fileName}_Sequence\{File.separator}\{fileName}_\{index}.png"),
-                new Pixmap(Main.width, Main.height, Pixmap.Format.RGBA8888) {{
-                    for (int h = 0; h < Main.height; h++) {
-                        for (int w = 0; w < Main.width; w++) {
-                            int argb = image.getPixelReader().getArgb(w, h);
-                            drawPixel(w, h, (argb << 8) | (argb >>> 24));
-                        }
-                    }
-                }}, Main.sequence, true);
+        var percent = (double) items++ / counter;
+        Platform.runLater(() -> Main.progressBar.setProgress(percent));
 
-            var percent = (double) items++ / counter;
-            Platform.runLater(() -> Main.progressBar.setProgress(percent));
-            // System.out.println("保存：" + index);
-        }
+        pixmap.dispose();
+        // System.out.println(STR."保存：\{index}");
     }
 }
